2009-03-19  H.J. Lu  <hongjiu.lu@intel.com>

	* readelf.c (debug_apply_relocations): Check relocations
	against STT_SECTION symbol.

2009-03-18  H.J. Lu  <hongjiu.lu@intel.com>

	* readelf.c (debug_apply_relocations): Allow relocations
	against function symbols.

2009-03-18  Alan Modra  <amodra@bigpond.net.au>

	* sysdep.h: Include alloca-conf.h instead of config.h and remove
	existing #if's handling alloca.
	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2009-03-14  Richard Sandiford  <r.sandiford@uk.ibm.com>

	* configure.tgt: Extend AIX 5 behavior to AIX 6 and above.
	* configure.in: Likewise.
	* configure: Regenerate.

2009-03-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/9945
	* objcopy.c (copy_object): Clear HAS_RELOC when stripping all.

2009-03-11  Chris Demetriou  <cgd@google.com>

	* ar.c (deterministic): New global variable.
	(main): Recognize new 'D' option, which enables 'deterministic mode'.
	(usage): Document new 'D' option.
	(write_archive): Set BFD_DETERMINISTIC_OUTPUT in output archive's
	flags if deterministic mode was requested.
	* doc/binutils.texi (ar): Document deterministic mode ('D' option).

2009-03-09  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/9933
	* objcopy.c (filter_symbols): Properly handle common symbols
	in relocatable file.

2009-03-06  Nick Clifton  <nickc@redhat.com>

	* po/es.po: Updated Spanish translation.

2009-03-05  Nick Clifton  <nickc@redhat.com>

	* objdump.c (disassemble_section): If the computed next offset is
	not beyond the current offset then just continue to the end.

2009-03-04  Tristan Gingold  <gingold@adacore.com>

	* MAINTAINERS: Add myself as VMS maintainer.

2009-03-03  Nick Clifton  <nickc@redhat.com>

	* readelf.c: Update formatting.

2009-03-03  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2009-03-03  Alan Modra  <amodra@bigpond.net.au>

	* objdump.c (disassemble_section): Mask address before sign extending.
